--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="btn">
                     <button id="btn__letter">
-                        Click here Rashmii
+                        Click here SHANA
                         <i class="fa-regular fa-envelope"></i>
                     </button>
                 </div>
@@ -57,7 +57,7 @@
                     </div>
                     <div class="name">
                         <i class="fa-solid fa-heart"></i>
-                        <span>Rashmiiii</span>
+                        <span>SHANA</span>
                         <i class="fa-solid fa-heart"></i>
                     </div>
                     <div class="balloon_one">
@@ -144,12 +144,11 @@
     </div>
 
     <div id="copy">
-		<p class="text-center text-white text-sm">OG Creator <a
-			href="https://www.instagram.com/aoudumber.dev/reels/#">@aqib_reza</a></p>
+		<p class="text-center text-white text-sm">OG Creator <a href="https://www.instagram.com/_aqib_reza_?igsh=aHUwMXk3M2p5Y3hp">@aqib_reza</a></p>
 	  </div>
 </body>
 <script>
-    let datetxt = "5 April 1996";
+    let datetxt = "14 April 2007";
     let datatxtletter = "My love. You are a very special girl. I always silently thank you for coming into my life. Today, I wish you all the best, lots of health, and lots of joy. I always hope we will celebrate many more birthdays like this together. Happy birthday to you.💕";
     let titleLetter = "To you";
     let charArrDate = datetxt.split('');
