--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="name">
                         <i class="fa-solid fa-heart"></i>
-                        <span>SHANA{Miss jr}</span>
+                        <span>SHANA_NAAZ</span>
                         <i class="fa-solid fa-heart"></i>
                     </div>
                     <div class="balloon_one">
