--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
 			    
                     </div>
                     <i class="fa-solid fa-heart"></i>
+			<audio autoplay loop>
+				<source src="./audio/HBD.m4a">
+			</audio>
                 </div>
             </div>
         </div>
