--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@
 			    
                     </div>
                     <i class="fa-solid fa-heart"></i>
-			<audio autoplay loop>
-				<source src="./audio/HBD.m4a">
-			</audio>
+			
                 </div>
             </div>
         </div>
@@ -150,6 +148,10 @@
     <div id="copy">
 		<p class="text-center text-white text-sm">OG Creator <a href="https://www.instagram.com/_aqib_reza_?igsh=aHUwMXk3M2p5Y3hp">@aqib_reza</a></p>
 	  </div>
+	<audio id="musicplayer" autoplay loop>
+  <source src="./audio/HBD.m4a" />
+	</audio>
+	
 </body>
 <script>
     let datetxt = "14 April 2007";
