--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <div id="copy">
 		<p class="text-center text-white text-sm">OG Creator <a href="https://www.instagram.com/_aqib_reza_?igsh=aHUwMXk3M2p5Y3hp">@aqib_reza</a></p>
 	  </div>
-	<audio id="musicplayer" autoplay loop>
+	<audio id="musicplayer" type="audio/m4a" autoplay loop>
   <source src="./audio/HBD.m4a" />
 	</audio>
 	
