--- a/index.html
+++ b/index.html
@@ -148,7 +148,11 @@
     <div id="copy">
 		<p class="text-center text-white text-sm">OG Creator <a href="https://www.instagram.com/_aqib_reza_?igsh=aHUwMXk3M2p5Y3hp">@aqib_reza</a></p>
 	  </div>
-	
+	<audio autoplay loop>
+		<scorce src="/audio/HBD.mp3" type="audio/mp3">
+			
+		</scorce>
+	</audio>
 	
 </body>
 <script>
