--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 		<p class="text-center text-white text-sm">OG Creator <a href="https://www.instagram.com/_aqib_reza_?igsh=aHUwMXk3M2p5Y3hp">@aqib_reza</a></p>
 	  </div>
 	<audio autoplay loop>
-		<source src="/audio/HBD.mp3" type="audio/mp3">
+		<source src="./audio/HBD.mp3" type="audio/mp3">
 	</audio>
 	
 </body>
