--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </div>
 
     <div id="copy">
-		<p class="text-center text-white text-sm">OG Creator <a href="https://www.instagram.com/_aqib_reza_?igsh=aHUwMXk3M2p5Y3hp">@aqib_reza</a></p>
+		<p class="text-center text-white text-sm">OG Creator <a href="https://www.instagram.com/_aqib_reza_?igsh=aHUwMXk3M2p5Y3hp">@aqsha</a></p>
 	  </div>
 	
 	
