--- a/index.html
+++ b/index.html
@@ -148,10 +148,15 @@
     <div id="copy">
 		<p class="text-center text-white text-sm">OG Creator <a href="https://www.instagram.com/_aqib_reza_?igsh=aHUwMXk3M2p5Y3hp">@aqsha</a></p>
 	  </div>
-	
+	<audio id="bg-music" src="hbd.mp3" autoplay loop muted></audio>
 	
 </body>
 <script>
+	document.addEventListener('click', () => {
+    const audio = document.getElementById('bg-music');
+    audio.muted = false;
+    audio.play();
+  }, { once: true });
     let datetxt = "14 April 2007";
     let datatxtletter = "My love. You are a very special girl. I always silently thank you for coming into my life. Today, I wish you all the best, lots of health, and lots of joy. I always hope we will celebrate many more birthdays like this together. Happy birthday to you.💕";
     let titleLetter = "To you";
