--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <div id="copy">
 		<p class="text-center text-white text-sm">OG Creator <a href="https://www.instagram.com/_aqib_reza_?igsh=aHUwMXk3M2p5Y3hp">@aqsha</a></p>
 	  </div>
-	<audio id="bg-music" src="hbd.mp3" autoplay loop muted></audio>
+	<audio id="bg-music" src="HBD.mp3" autoplay loop muted></audio>
 	
 </body>
 <script>
